<resources>
  <string name="default_username">YOUR_DEFAULT_USER_NAME</string>
  <string name="default_password">YOUR_DEFAULT_USER_PASSWORD</string>
  <string name="default_protocol">YOUR_DEFAULT_HTTP_PROTOCOL</string>
  <string name="default_host">YOUR_DEFAULT_WEB_ADDRESS</string>
  <string name="default_port">YOUR_DEFAULT_WEB_PORT</string>
  <string name="default_page">/mini-stock-provider/</string>
  <string name="default_check_update_startup">true</string>

  <string name="app_name">MiniStock</string>
  <string name="title_hint">Title</string>
  <string name="count_hint">Count</string>
  <string name="date">Date</string>
  <string name="items">Items</string>
  <string name="on_double_back_exit_text">Press once again to exit!</string>
  <string name="ok">OK</string>
  <string name="cancel">Cancel</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="error">ERROR</string>
  <string name="db_error">DB ERROR</string>
  <string name="error_list_entries">Unable to list the entries, the server responded with an error code</string>
  <string name="error_delete_entry">Unable to delete the selected entry, the server responded with an error code</string>
  <string name="empty_cart">Please slide from top to bottom to refresh</string>
  <string name="error_file_not_found">The file was not found</string>
  <string name="error_invalid_title">Invalid title value</string>
  <string name="error_item_already_exists">This article already exists</string>
  <string name="permissions_title">Permissions</string>
  <string name="permissions_required">The permissions are required</string>
  <string name="confirm_delete_entry">Are you sure you want to delete the entry</string>
  <string name="help" translatable="false">\?</string>
  <string name="settings_pref_title">Settings</string>
  <string name="settings_pref_title_protocol">Protocol</string>
  <string name="settings_pref_summary_protocol">Internet protocol to use</string>
  <string name="settings_pref_title_host">Address</string>
  <string name="settings_pref_summary_host">Web address (eg: www.site.com)</string>
  <string name="settings_pref_title_port">Port</string>
  <string name="settings_pref_summary_port">Web port (eg: 80, 443)</string>
  <string name="settings_pref_title_page">Page</string>
  <string name="settings_pref_summary_page">Web page</string>
  <string name="settings_pref_title_username">User name</string>
  <string name="settings_pref_summary_username">Authentication user name</string>
  <string name="settings_pref_title_password">Password</string>
  <string name="settings_pref_summary_password">Authentication user password</string>
  <string name="settings_pref_update_title">Update</string>
  <string name="settings_pref_title_check_update_startup">Check at startup</string>
  <string name="settings_pref_summary_check_update_startup">Checks if an update is available when the application starts.</string>
  <string name="settings_pref_title_check_update">Check for update</string>
  <string name="settings_pref_summary_check_update">Checks if an update is available.</string>
  <string name="settings_pref_title_version">Version</string>
  <string name="error_invalid_host">Invalid web address value</string>
  <string name="error_invalid_port">Invalid web port value</string>
  <string name="error_invalid_page">Invalid web page value (The page must at least be "/").</string>
  <string name="error_invalid_username">Invalid username value</string>
  <string name="error_invalid_password">Invalid password value</string>
  <string name="confirm_delete_item">Are you sure you want to delete this item\?</string>
  <string name="update_nfy_title">Application update</string>
  <string name="update_nfy_in_progress">Download in progress</string>
  <string name="update_nfy_done">Download done</string>
  <string name="update_nfy_error">Download error</string>
  <string name="update_confirm">New version found, do you want to download it\?</string>
  <string name="update_search">Check for updates&#8230;</string>
  <string name="no_update">No update available</string>


</resources>
